--- a/BookItSrc/package.json
+++ b/BookItSrc/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "^5.2.9",
     "@angular/cdk": "^5.2.4",
     "@angular/common": "^5.2.0",
@@ -31,8 +32,8 @@
     "core-js": "^2.4.1",
     "firebase": "^4.12.1",
     "hammerjs": "^2.0.8",
-    "ngx-bootstrap": "^2.0.3",
     "ng2-slider-component": "^1.0.9",
+    "ngx-bootstrap": "^2.0.3",
     "primeng": "^5.2.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
