--- a/BookItSrc/package.json
+++ b/BookItSrc/package.json
@@ -26,7 +26,9 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^5.2.0",
     "@ngrx/store": "^5.2.0",
+    "@ngrx/store-devtools": "^3.2.4",
     "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
@@ -54,6 +56,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "redux-devtools-extension": "^2.13.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "^2.5.3"
