--- a/BookItSrc/package.json
+++ b/BookItSrc/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
     "firebase": "^4.12.1",
+    "geofire": "^4.1.2",
     "hammerjs": "^2.0.8",
     "ng2-slider-component": "^1.0.9",
     "ngx-bootstrap": "^2.0.3",
