--- a/BookItSrc/package.json
+++ b/BookItSrc/package.json
@@ -35,6 +35,7 @@
     "firebase": "^4.12.1",
     "geofire": "^4.1.2",
     "hammerjs": "^2.0.8",
+    "ng-click-outside": "^4.0.0",
     "ng2-slider-component": "^1.0.9",
     "ngx-bootstrap": "^2.0.3",
     "primeng": "^5.2.4",
