--- a/BookItSrc/src/manifest.json
+++ b/BookItSrc/src/manifest.json
@@ -7,7 +7,7 @@
     {
       "src": "assets/images/panda_96x96.png",
       "sizes": "96x96",
-      "type": "image/png",
+      "type": "image/png"
     }
   ]
 }
